--- a/src/app/zip-code/zip-code.component.html
+++ b/src/app/zip-code/zip-code.component.html
@@ -1,28 +1,28 @@
 <div class="well">
   <h2>Enter a zipcode:</h2>
-  <input class="form-control" placeholder="Zipcode" type="text" id="addLocation">
+  <input class="form-control" placeholder="Zipcode" type="text" id="addLocation" [(ngModel)]="zipCode">
   <br>
-  <button class="btn btn-primary" id="addLocationBtn">
+  <button class="btn btn-primary" id="addLocationBtn" (click)="addLocation(zipCode,true)" [disabled]="!zipCode || (zipCode && zipCode.length<5)">
     Add location
   </button>
 </div>
 
-<div class="well flex">
+<div class="well flex" *ngFor= "let item of currentWeatherArray">
   <div>
-    <h3>Rancho Cordova (95742)</h3>
-    <h4>Current conditions: Clouds</h4>
+    <h3>{{item.name}} ({{item.zipCode}})</h3>
+    <h4>Current conditions: {{item.weather[0].main}}</h4>
     <h4>Temperatures today:</h4>
     <p>
-      Current 58
-      - Max 65
-      - Min 48
+      Current {{item.main.temp | number: '1.0-0'}}
+      - Max {{item.main.temp_max | number: '1.0-0'}}
+      - Min {{item.main.temp_min | number: '1.0-0'}}
     </p>
     <p>
-      <a [routerLink]="['/forecast', 1]">>Show 5-day forecast for Rancho Cordova</a>
+      <a [routerLink]="['/forecast', item.zipCode]">>Show 5-day forecast for {{item.name}}</a>
     </p>
   </div>
   <div>
-    <span class="close">×</span>
-    <img src="https://www.angulartraining.com/images/weather/sun.png">
+    <span class="close" (click)="removeLocation(item.zipCode)">×</span>
+    <img src="{{item.imgSource}}">
   </div>
 </div>
