--- a/src/app/weather-by-zip-five-days/weather-by-zip-five-days.component.html
+++ b/src/app/weather-by-zip-five-days/weather-by-zip-five-days.component.html
@@ -43,5 +43,5 @@
       </li>
     </ul>
   </div>
-  <button class="btn btn-success" tabindex="0" id="mainPageBtn">&lt; Back to main page</button>
+  <button [routerLink]="['']" class="btn btn-success" tabindex="0" id="mainPageBtn">&lt; Back to main page</button>
 </div>
